sharepoint/3.1/modules/ROOT/pages/sharepoint-connector-reference.adoc
= SharePoint Connector Reference - Mule 4
:page-aliases: connectors::sharepoint/sharepoint-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Microsoft SharePoint Connector version 3.1

Anypoint Connector for SharePoint enables you to connect to a Microsoft SharePoint application.

Release Notes: xref:release-notes::connector/sharepoint-connector-release-notes-mule-4.adoc[Microsoft SharePoint Connector Release Notes]

== Configurations
---
[[sharepoint-online]]
=== Sharepoint Online


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<sharepoint-online_okta, Okta>>
* <<sharepoint-online_online, Online>>
* <<sharepoint-online_security-token, Security Token>>
 | The connection types to provide to this configuration. | | x
| Charset a| Enumeration, one of:

** US_ASCII
** ISO_8859_1
** UTF_8
** UTF_16BE
** UTF_16LE
** UTF_16 |  |  UTF_8 |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[sharepoint-online_okta]]
===== Okta


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Okta Username a| String |  Username that you want to login with against Okta Identity Provider. |  | x
| Okta Password a| String |  Password for the user that you are going to login against Okta Identity Provider. |  | x
| Okta Domain a| String |  Domain name for Okta Identity Provider. |  | x
| Okta API token a| String |  |  | x
| SharePoint Online embedded link from Okta a| String |  |  | x
| Disable SSL certificate validation a| Boolean |  When dealing with HTTPS certificates, if the certificate is not signed by a trusted partner, the server might respond with an Exception.  To prevent this it is possible to disable the CN (Common Name) check.  <b>Note</b>: this is not recommended for production environments. |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use in authentication against the proxy server. |  |
| Password a| String |  Password for the username to use in authentication against the proxy server. |  |
| NTLM Domain a| String |  The domain to authenticate against the proxy. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===
[[sharepoint-online_online]]
===== Online


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Online Username a| String |  Username that you want to login with. Domain should not be included. |  | x
| Online Password a| String |  Password for the user that you are going to login. |  | x
| Site Url a| String |  URL for the sharepoint instance that the connector is going to interact with. |  | x
| Disable SSL certificate validation a| Boolean |  When dealing with HTTPS certificates, if the certificate is not signed by a trusted partner, the server might respond with an Exception.  To prevent this it is possible to disable the CN (Common Name) check.  <b>Note</b>: this is not recommended for production environments. |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use in authentication against the proxy server. |  |
| Password a| String |  Password for the username to use in authentication against the proxy server. |  |
| NTLM Domain a| String |  The domain to authenticate against the proxy. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===
[[sharepoint-online_security-token]]
===== Security Token

Deprecated the SecurityTokenConnectionStrategy Connection Provider because the BasicConnectionProvider already obtains the security token by itself

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Security Token a| String |  |  | x
| Security Token Provider a| <<SecurityTokenProvider>> |  (Optional) Provider instance that will provide the security token when required. |  |
| Site Url a| String |  URL for the sharepoint instance that the connector is going to interact with. |  | x
| Disable SSL certificate validation a| Boolean |  When dealing with HTTPS certificates, if the certificate is not signed by a trusted partner, the server might respond with an Exception.  To prevent this it is possible to disable the CN (Common Name) check.  <b>Note</b>: this is not recommended for production environments. |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use for authenticating against the proxy server. |  |
| Password a| String |  Password for the username to use in authentication against the proxy server. |  |
| NTLM Domain a| String |  The domain to authenticate against the proxy. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
|===

== Supported Operations
* <<attachFile>>
* <<fileAdd>>
* <<fileApprove>>
* <<fileCheckIn>>
* <<fileCheckOut>>
* <<fileCopyTo>>
* <<fileDelete>>
* <<fileDeny>>
* <<fileGetContent>>
* <<filePublish>>
* <<fileQuery>>
* <<fileRecycle>>
* <<fileUndoCheckOut>>
* <<fileUnpublish>>
* <<fileUpdateMetadata>>
* <<folderCreate>>
* <<folderDelete>>
* <<folderQuery>>
* <<getMetadata>>
* <<listCreate>>
* <<listDelete>>
* <<listGet>>
* <<listGetAll>>
* <<listItemCreate>>
* <<listItemDelete>>
* <<listItemQuery>>
* <<listItemUpdate>>
* <<listUpdate>>
* <<resolveCollection>>
* <<resolveObject>>

==== Associated Sources
* <<created-objects>>
* <<deleted-objects>>
* <<modified-objects>>

---
[[sharepoint-onpremise]]
=== Sharepoint Onpremise


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<sharepoint-onpremise_claims, Claims>>
* <<sharepoint-onpremise_kerberos, Kerberos>>
* <<sharepoint-onpremise_ntlm, Ntlm>>
* <<sharepoint-onpremise_security-token, Security Token>>
 | The connection types to provide to this configuration. | | x
| Charset a| Enumeration, one of:

** US_ASCII
** ISO_8859_1
** UTF_8
** UTF_16BE
** UTF_16LE
** UTF_16 |  |  UTF_8 |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[sharepoint-onpremise_claims]]
===== Claims


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Claims Username a| String |  Username that you want to login with. Domain should not be included. |  | x
| Claims Password a| String |  Password for the user that you are going to login. |  | x
| Site Url a| String |  URL for the sharepoint instance that the connector is going to interact with. |  | x
| Sts Url a| String |  Security Token Service URL to use for claims authentication |  | x
| Scope a| String |  Application Identifier configured for this Sharepoint Site in the Sts (a.k.a. 'Relying Party Identifier', 'Client Identifier', 'Scope' or 'Realm'). |  | x
| Disable SSL certificate validation a| Boolean |  When dealing with HTTPS certificates, if the certificate is not signed by a trusted partner, the server might respond with an Exception.  To prevent this it is possible to disable the CN (Common Name) check.  <b>Note</b>: this is not recommended for production environments. |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use in authentication against the proxy server. |  |
| Password a| String |  Password for the username to use in authentication against the proxy server. |  |
| NTLM Domain a| String |  The domain to authenticate against the proxy. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===
[[sharepoint-onpremise_kerberos]]
===== Kerberos


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Kerberos Username a| String |  Username that you want to login with. Domain should not be included. |  | x
| Kerberos Password a| String |  Password for the user that you are going to login. |  | x
| Site Url a| String |  URL for the sharepoint instance that the connector is going to interact with. |  | x
| SPN a| String |  (Optional) SPN for the SharePoint Web Service. |  |
| Realm a| String |  (Optional) The case-sensitive default realm (Domain Name) that the user belongs to. |  |
| KDC a| String |  (Optional) The KDC (usually the Domain Controller name) to authenticate the user. |  |
| Login Properties File Path a| String |  (Optional) Path to a customized Login Properties File. When not specified, default values which usually work for most cases will be set up. |  |
| Kerberos Properties File Path a| String |  (Optional) Path to a customized Kerberos Properties File. |  |
| Disable SSL certificate validation a| Boolean |  When dealing with HTTPS certificates, if the certificate is not signed by a trusted partner, the server might respond with an Exception.  To prevent this it is possible to disable the CN (Common Name) check.  <b>Note</b>: this is not recommended for production environments. |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use in authentication against the proxy server. |  |
| Password a| String |  Password for the username to use in authentication against the proxy server. |  |
| NTLM Domain a| String |  The domain to authenticate against the proxy. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===
[[sharepoint-onpremise_ntlm]]
===== Ntlm


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Domain a| String |  Domain name to use for NTLM auth |  | x
| Ntlm Username a| String |  Username that you want to login with. Domain should not be included. |  | x
| Ntlm Password a| String |  Password for the user that you are going to login. |  | x
| Site Url a| String |  URL for the sharepoint instance that the connector is going to interact with. |  | x
| Disable SSL certificate validation a| Boolean |  When dealing with HTTPS certificates, if the certificate is not signed by a trusted partner, the server might respond with an Exception.  To prevent this it is possible to disable the CN (Common Name) check.  <b>Note</b>: this is not recommended for production environments. |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use in authentication against the proxy server. |  |
| Password a| String |  Password for the username to use in authentication against the proxy server. |  |
| NTLM Domain a| String |  The domain to authenticate against the proxy. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===
[[sharepoint-onpremise_security-token]]
===== Security Token


Deprecated the SecurityTokenConnectionStrategy Connection Provider because the BasicConnectionProvider already obtains the security token by itself


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Security Token a| String |  |  | x
| Security Token Provider a| <<SecurityTokenProvider>> |  (Optional) Provider instance that will provide the security token when required. |  |
| Site Url a| String |  URL for the sharepoint instance that the connector is going to interact with. |  | x
| Disable SSL certificate validation a| Boolean |  When dealing with HTTPS certificates, if the certificate is not signed by a trusted partner, the server might respond with an Exception.  To prevent this it is possible to disable the CN (Common Name) check.  <b>Note</b>: this is not recommended for production environments. |  false |
| Host a| String |  Hostname for the proxy server. |  |
| Port a| Number |  Port number for the proxy server. |  |
| Username a| String |  Username to use in authentication against the proxy server. |  |
| Password a| String |  Password for the username to use in authentication against the proxy server. |  |
| NTLM Domain a| String |  The domain to authenticate against the proxy. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

== Supported Operations
* <<attachFile>>
* <<fileAdd>>
* <<fileApprove>>
* <<fileCheckIn>>
* <<fileCheckOut>>
* <<fileCopyTo>>
* <<fileDelete>>
* <<fileDeny>>
* <<fileGetContent>>
* <<filePublish>>
* <<fileQuery>>
* <<fileRecycle>>
* <<fileUndoCheckOut>>
* <<fileUnpublish>>
* <<fileUpdateMetadata>>
* <<folderCreate>>
* <<folderDelete>>
* <<folderQuery>>
* <<getMetadata>>
* <<listCreate>>
* <<listDelete>>
* <<listGet>>
* <<listGetAll>>
* <<listItemCreate>>
* <<listItemDelete>>
* <<listItemQuery>>
* <<listItemUpdate>>
* <<listUpdate>>
* <<resolveCollection>>
* <<resolveObject>>

==== Associated Sources
* <<created-objects>>
* <<deleted-objects>>
* <<modified-objects>>


== Operations

[[attachFile]]
=== Attach File
`<sharepoint:attach-file>`


Attach a File to an item from a Sharepoint list


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| List Title a| String |  (Mandatory) Title of the list the item belongs to |  | x
| Item Id a| String |  The ID of the list item. |  | x
| File Name a| String |  The name of the file. |  | x
| Content a| Binary |  The file content represented as a stream. The stream and file name must be given if localFilePath is empty |  #[payload] |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[fileAdd]]
=== File Add
`<sharepoint:file-add>`


Adds a file.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| File Content Stream a| Binary |  |  |
| Overwrite a| Boolean |  |  false |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SharepointFile>>
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[fileApprove]]
=== File Approve
`<sharepoint:file-approve>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| Comment a| String |  |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[fileCheckIn]]
=== File Check In
`<sharepoint:file-check-in>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| Check In Type a| Enumeration, one of:

** MINOR_CHECK_IN
** MAJOR_CHECK_IN
** OVERWRITE_CHECK_IN |  |  | x
| Comment a| String |  |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[fileCheckOut]]
=== File Check Out
`<sharepoint:file-check-out>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[fileCopyTo]]
=== File Copy To
`<sharepoint:file-copy-to>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| New File Server Relative Url a| String |  |  | x
| Overwrite a| Boolean |  |  false |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[fileDelete]]
=== File Delete
`<sharepoint:file-delete>`


Deletes a file.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[fileDeny]]
=== File Deny
`<sharepoint:file-deny>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| Comment a| String |  |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[fileGetContent]]
=== File Get Content
`<sharepoint:file-get-content>`


FIXME: Add comments.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[filePublish]]
=== File Publish
`<sharepoint:file-publish>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| Comment a| String |  |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[fileQuery]]
=== File Query
`<sharepoint:file-query>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query a| String |  |  | x
| Starting Folder Path a| String |  |  / |
| Recursive a| Boolean |  |  false |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[fileRecycle]]
=== File Recycle
`<sharepoint:file-recycle>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[fileUndoCheckOut]]
=== File Undo Check Out
`<sharepoint:file-undo-check-out>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[fileUnpublish]]
=== File Unpublish
`<sharepoint:file-unpublish>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| Comment a| String |  |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[fileUpdateMetadata]]
=== File Update Metadata
`<sharepoint:file-update-metadata>`


FIXME: Add comments.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| Update Properties a| Object |  |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[folderCreate]]
=== Folder Create
`<sharepoint:folder-create>`


Creates a folder in a Document list


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Url a| String |  (Mandatory) Server relative URL of the folder to create, , for example /Shared Documents/new folder, creates a folder in the 'Shared Documents' list |  |
| Welcome Page a| String |  (Optional) Welcome page property of the folder, , for example index.html |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SharepointFolder>>
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[folderDelete]]
=== Folder Delete
`<sharepoint:folder-delete>`


Deletes a folder from a Document list


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Url a| String |  (Mandatory) Server relative URL of the folder to delete, , for example /Shared Documents/new folder, deletes 'new folder' from 'Shared Documents' list |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[folderQuery]]
=== Folder Query
`<sharepoint:folder-query>`


Retrieves all folders that matches the specified criteria


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query a| String |  (Mandatory) OData query in the format listDocumentName&#63;queryString, e.g Shared Documents&#63;&#36;select=Name&#38;&#36;filter Name , for example 'folderName' |  | x
| Starting Folder Path a| String |  (Optional) The starting path of the folder from where to begin the query, relative to the document library selected as part of the query below, , for example /myfolder/level2 search for folders inside /document library/myfolder/level2. [Note: you must specify the document library as part of the query below] |  / |
| Recursive a| Boolean |  Specifies whether to search recursively in inner folders |  false |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[getMetadata]]
=== Get Metadata
`<sharepoint:get-metadata>`


Gets the metadata of a determined file.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Server Relative Url a| String |  |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SharepointFile>>
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[listCreate]]
=== List Create
`<sharepoint:list-create>`


Creates a new SharepointList


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| List a| <<SharepointList>> |  (Mandatory) Sharepoint List reference to create |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SharepointList>>
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[listDelete]]
=== List Delete
`<sharepoint:list-delete>`


Deletes a Sharepoint list


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| List Id a| String |  (Mandatory) Id of the list to delete |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[listGet]]
=== List Get
`<sharepoint:list-get>`


Retrieves a Sharepoint list


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| List Id a| String |  (Mandatory) Id of the list to retrieve |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SharepointList>>
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[listGetAll]]
=== List Get All
`<sharepoint:list-get-all>`


Retrieves all Sharepoint lists


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of <<SharepointList>>
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[listItemCreate]]
=== List Item Create
`<sharepoint:list-item-create>`


Creates a new Item in an existing Sharepoint list


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| List Id a| String |  (Mandatory) Id of the list where to create the Item |  | x
| Properties a| Object |  (Mandatory) Properties of the item to create |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[listItemDelete]]
=== List Item Delete
`<sharepoint:list-item-delete>`


Deletes an Item from a Sharepoint list


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| List Id a| String |  (Mandatory) Id of the list where to delete the Item |  | x
| Item Id a| String |  (Mandatory) Id of the item to delete |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[listItemQuery]]
=== List Item Query
`<sharepoint:list-item-query>`


Executes a query against a Sharepoint list and returns list items that match the specified criteria


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query a| String |  Query in the format listId?queryString |  | x
| Retrieve References a| Boolean |  Retrieve full objects for reference fields (note: large lists with many reference fields may take a long time to retrieve) |  false |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[listItemUpdate]]
=== List Item Update
`<sharepoint:list-item-update>`


Updates an Item from a Sharepoint list


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| List Id a| String |  (Mandatory) Id of the list where to update the Item |  | x
| Item Id a| String |  (Mandatory) Id of the item to update |  | x
| Updated Properties a| Object |  (Mandatory) Item properties to update |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[listUpdate]]
=== List Update
`<sharepoint:list-update>`


Updates the specified properties of a Sharepoint lists


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| List Id a| String |  (Mandatory) Id of the list to update |  | x
| List a| <<SharepointList>> |  (Mandatory) List Properties to update |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[resolveCollection]]
=== Resolve Collection
`<sharepoint:resolve-collection>`


Executes an HTTP GET against the Sharepoint API.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Url a| String |  (Mandatory) The absolute or relative url to get. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


[[resolveObject]]
=== Resolve Object
`<sharepoint:resolve-object>`


Executes an HTTP GET against the Sharepoint API (POST if body is blob).


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Url a| String |  (Mandatory) The absolute or relative url to get. |  | x
| Request Type a| Enumeration, one of:

** Get
** Create
** Merge
** Delete |  The request type to be sent. |  Get |
| Request Body a| Any |  Body of the request to send. 'null' if empty request body. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>

==== Throws
* SHAREPOINT:RETRY_EXHAUSTED
* SHAREPOINT:UNKNOWN
* SHAREPOINT:CONNECTIVITY


== Sources

[[created-objects]]
=== Created Objects
`<sharepoint:created-objects>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Since a| String |  Required date format is 'yyyy-MM-ddTHH:mm:ssZ'. If left empty the UTC moment of time is used as a starting point |  |
| Object Type a| Enumeration, one of:

** FOLDER
** FILE
** LIST
** LIST_ITEM |  The type of objects to listen for |  | x
| List Id a| String |  This optional field is used when listening for newly created list items or files |  |
| Recursive a| Boolean |  This optional field is used only when listening for created files or folders |  false |
| Path a| String |  Optional parameter used for FOLDER and FILE object types, that specifies the base path to start looking at |  / |
| Primary Node Only a| Boolean |  Whether this source should only be executed on the primary node when running in Cluster |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
| Attributes Type a| Any
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>



[[deleted-objects]]
=== Deleted Objects
`<sharepoint:deleted-objects>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Since a| String |  Required date format is 'yyyy-MM-ddTHH:mm:ssZ |  |
| Primary Node Only a| Boolean |  Whether this source should only be executed on the primary node when running in Cluster |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<DeletedObject>>
| Attributes Type a| Any
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>



[[modified-objects]]
=== Modified Objects
`<sharepoint:modified-objects>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Since a| String |  Required date format is 'yyyy-MM-ddTHH:mm:ssZ'. If left empty the UTC moment of time is used as a starting point |  |
| Object Type a| Enumeration, one of:

** FOLDER
** FILE
** LIST
** LIST_ITEM |  The type of objects to listen for |  | x
| List Id a| String |  This optional field is used when listening for modified list items or files |  |
| Recursive a| Boolean |  This optional field is used only when listening for modified files or folders |  false |
| Path a| String |  |  / |
| Primary Node Only a| Boolean |  Whether this source should only be executed on the primary node when running in Cluster |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
| Attributes Type a| Any
|===

=== For Configurations
* <<sharepoint-online>>
* <<sharepoint-onpremise>>



== Types
[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Count a| Number | How many reconnection attempts to make. |  |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is SHA-256. |  |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property may only be set if useSecureHash is false. |  |
| Object Store a| Object Store | The object store where the redelivery counter for each message is stored. |  |
|===

[[DeletedObject]]
=== Deleted Object

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Author Email a| String |  |  |
| Author Name a| String |  |  |
| Deleted By Name a| String |  |  |
| Deleted Date a| String |  |  |
| Deleted Date Local Formatted a| String |  |  |
| Dir Name a| String |  |  |
| Id a| String |  |  |
| Item State a| Number |  |  |
| Item Type a| Number |  |  |
| Size a| String |  |  |
| Title a| String |  |  |
|===

[[SharepointFile]]
=== Sharepoint File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Author a| Object |  |  |
| Check In Comment a| String |  |  |
| Check Out Type a| String |  |  |
| Checked Out By User a| Object |  |  |
| Content Tag a| String |  |  |
| Customized Page Status a| String |  |  |
| E Tag a| String |  |  |
| Exists a| Boolean |  |  |
| Length a| Number |  |  |
| Level a| Number |  |  |
| Linking Url a| String |  |  |
| List Item All Fields a| Object |  |  |
| Locked By User a| Object |  |  |
| Major Version a| Number |  |  |
| Metadata a| Object |  |  |
| Minor Version a| Number |  |  |
| Modified By a| Object |  |  |
| Name a| String |  |  |
| Server Relative Url a| String |  |  |
| Time Created a| String |  |  |
| Time Last Modified a| String |  |  |
| Title a| String |  |  |
| U I Version a| Number |  |  |
| U I Version Label a| String |  |  |
| Unique Id a| String |  |  |
| Versions a| Object |  |  |
|===

[[SharepointFolder]]
=== Sharepoint Folder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Exists a| Boolean |  |  |
| Files a| Object |  |  |
| Folders a| Object |  |  |
| Item Count a| Number |  |  |
| List Item All Fields a| Object |  |  |
| Metadata a| Object |  |  |
| Name a| String |  |  |
| Parent Folder a| Object |  |  |
| Properties a| Object |  |  |
| Server Relative Url a| String |  |  |
| Time Created a| String |  |  |
| Time Last Modified a| String |  |  |
| Unique Id a| String |  |  |
| Welcome Page a| String |  |  |
|===

[[SharepointList]]
=== Sharepoint List

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Allow Content Types a| Boolean |  |  |
| Base Template a| Enumeration, one of:

** GENERIC_LIST
** DOCUMENT_LIBRARY
** SURVEY
** LINKS
** ANNOUNCEMENTS
** CONTACTS
** EVENTS
** TASKS
** DISCUSSION_BOARD
** PICTURE_LIBRARY
** DATASOURCES
** WEB_TEMPLATE_CATALOG
** USER_INFORMATION
** WEB_PART_CATALOG
** LIST_TEMPLATE_CATALOG
** XML_FORM
** MASTER_PAGE_CATALOG
** NO_CODE_WORKFLOWS
** WORKFLOW_PROCESS
** WEB_PAGE_LIBRARY
** CUSTOM_GRID
** SOLUTION_CATALOG
** NO_CODE_PUBLIC
** THEME_CATALOG
** DESIGN_CATALOG
** APP_DATA_CATALOG
** DATA_CONNECTION_LIBRARY
** WORKFLOW_HISTORY
** GANTT_TASKS
** HELP_LIBRARY
** ACCESS_REQUEST
** TASKS_WITH_TIMELINE_AND_HIERARCHY
** MAINTENANCE_LOGS
** MEETINGS
** AGENDA
** MEETING_USER
** DECISION
** MEETING_OBJECTIVE
** TEXT_BOX
** THINGS_TO_BRING
** HOME_PAGE_LIBRARY
** POSTS
** COMMENTS
** CATEGORIES
** FACILITY
** WHEREABOUTS
** CALL_TRACK
** CIRCULATION
** TIMECARD
** HOLIDAYS
** IME_DIC
** EXTERNAL_LIST
** MY_SITE_DOCUMENT_LIBRARY
** ISSUE_TRACKING
** ADMIN_TASKS
** HEALTH_RULES
** HEALTH_REPORTS
** DEVELOPER_SITE_DRAFT_APPS |  |  |
| Base Type a| Number |  |  |
| Content Types a| Object |  |  |
| Content Types Enabled a| Boolean |  |  |
| Crawl Non Default Views a| Boolean |  |  |
| Creatables Info a| Object |  |  |
| Created a| String |  |  |
| Default Content Approval Workflow Id a| String |  |  |
| Default Display Form Url a| String |  |  |
| Default Edit Form Url a| String |  |  |
| Default New Form Url a| String |  |  |
| Default View a| Object |  |  |
| Description a| String |  |  |
| Description Resource a| Object |  |  |
| Direction a| Enumeration, one of:

** NONE
** LTR
** RTL |  |  |
| Document Template Url a| String |  |  |
| Draft Version Visibility a| Enumeration, one of:

** READER
** AUTHOR
** APPROVER |  |  |
| Enable Attachments a| Boolean |  |  |
| Enable Folder Creation a| Boolean |  |  |
| Enable Minor Versions a| Boolean |  |  |
| Enable Moderation a| Boolean |  |  |
| Enable Versioning a| Boolean |  |  |
| Entity Type Name a| String |  |  |
| Event Receivers a| Object |  |  |
| Fields a| Object |  |  |
| First Unique Ancestor Securable Object a| Object |  |  |
| Force Checkout a| Boolean |  |  |
| Forms a| Object |  |  |
| Has External Data Source a| Boolean |  |  |
| Hidden a| Boolean |  |  |
| Id a| String |  |  |
| Image Url a| String |  |  |
| Information Rights Management Settings a| Object |  |  |
| Irm Enabled a| Boolean |  |  |
| Irm Expire a| Boolean |  |  |
| Irm Reject a| Boolean |  |  |
| Is Application List a| Boolean |  |  |
| Is Catalog a| Boolean |  |  |
| Is Private a| Boolean |  |  |
| Item Count a| Number |  |  |
| Items a| Object |  |  |
| Last Item Deleted Date a| String |  |  |
| Last Item Modified Date a| String |  |  |
| List Item Entity Type Full Name a| String |  |  |
| Major Version Limit a| Number |  |  |
| Major With Minor Versions Limit a| Number |  |  |
| Metadata a| Object |  |  |
| Multiple Data List a| Boolean |  |  |
| No Crawl a| Boolean |  |  |
| On Quick Launch a| Boolean |  |  |
| Parent Web a| Object |  |  |
| Parent Web Url a| String |  |  |
| Parser Disabled a| Boolean |  |  |
| Role Assignments a| Object |  |  |
| Root Folder a| Object |  |  |
| Server Template Can Create Folders a| Boolean |  |  |
| Template Feature Id a| String |  |  |
| Title a| String |  |  |
| Title Resource a| Object |  |  |
| User Custom Actions a| Object |  |  |
| Validation Formula a| String |  |  |
| Validation Message a| String |  |  |
| Views a| Object |  |  |
| Workflow Associations a| Object |  |  |
|===

[[repeatable-in-memory-iterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The number of instances to initially keep in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. Default value is 100 instances. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | The maximum amount of instances to keep in memory. If more than that is required, content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
